modified:   Makefile 	modified:   buf.gen.yaml 	modified:   gen/desc/trb_proto.pb 	new file:   gen/go/t-invest/common.pb.go 	new file:   gen/go/t-invest/instruments.pb.go 	new file:   gen/go/t-invest/instruments_grpc.pb.go 	new file:   gen/go/t-invest/marketdata.pb.go 	new file:   gen/go/t-invest/marketdata_grpc.pb.go 	new file:   gen/go/t-invest/operations.pb.go 	new file:   gen/go/t-invest/operations_grpc.pb.go 	new file:   gen/go/t-invest/orders.pb.go 	new file:   gen/go/t-invest/orders_grpc.pb.go 	new file:   gen/go/t-invest/sandbox.pb.go 	new file:   gen/go/t-invest/sandbox_grpc.pb.go 	new file:   gen/go/t-invest/signals.pb.go 	new file:   gen/go/t-invest/signals_grpc.pb.go 	new file:   gen/go/t-invest/stoporders.pb.go 	new file:   gen/go/t-invest/stoporders_grpc.pb.go 	new file:   gen/go/t-invest/users.pb.go 	new file:   gen/go/t-invest/users_grpc.pb.go 	renamed:    gen/go/ExampleService.pb.go -> gen/go/trb/ExampleService.pb.go 	renamed:    gen/go/ExampleService.pb.gw.go -> gen/go/trb/ExampleService.pb.gw.go 	renamed:    gen/go/ExampleService_grpc.pb.go -> gen/go/trb/ExampleService_grpc.pb.go 	renamed:    gen/go/service.pb.go -> gen/go/trb/service.pb.go 	renamed:    gen/go/service_grpc.pb.go -> gen/go/trb/service_grpc.pb.go 	new file:   services/google/api/field_behavior.proto 	new file:   services/t-invest/common.proto 	new file:   services/t-invest/instruments.proto 	new file:   services/t-invest/marketdata.proto 	new file:   services/t-invest/operations.proto 	new file:   services/t-invest/orders.proto 	new file:   services/t-invest/sandbox.proto 	new file:   services/t-invest/signals.proto 	new file:   services/t-invest/stoporders.proto 	new file:   services/t-invest/users.proto 	renamed:    services/ExampleService.proto -> services/trb/ExampleService.proto 	renamed:    services/service.proto -> services/trb/service.proto

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -12,6 +12,10 @@ plugins:
     opt: paths=source_relative
 inputs:
   - directory: services
+    paths:
+      - services/trb
+      - services/t-invest
     exclude_paths:
       - services/google/api/annotations.proto
       - services/google/api/http.proto
+      - services/google/api/field_behavior.proto
