modified:   Makefile 	modified:   buf.gen.yaml 	modified:   buf.yaml 	modified:   gen/desc/trb_proto.pb 	renamed:    gen/go/t-invest/common.pb.go -> gen/go/tinvest/common.pb.go 	renamed:    gen/go/t-invest/instruments.pb.go -> gen/go/tinvest/instruments.pb.go 	renamed:    gen/go/t-invest/instruments_grpc.pb.go -> gen/go/tinvest/instruments_grpc.pb.go 	renamed:    gen/go/t-invest/marketdata.pb.go -> gen/go/tinvest/marketdata.pb.go 	renamed:    gen/go/t-invest/marketdata_grpc.pb.go -> gen/go/tinvest/marketdata_grpc.pb.go 	renamed:    gen/go/t-invest/operations.pb.go -> gen/go/tinvest/operations.pb.go 	renamed:    gen/go/t-invest/operations_grpc.pb.go -> gen/go/tinvest/operations_grpc.pb.go 	renamed:    gen/go/t-invest/orders.pb.go -> gen/go/tinvest/orders.pb.go 	renamed:    gen/go/t-invest/orders_grpc.pb.go -> gen/go/tinvest/orders_grpc.pb.go 	renamed:    gen/go/t-invest/sandbox.pb.go -> gen/go/tinvest/sandbox.pb.go 	renamed:    gen/go/t-invest/sandbox_grpc.pb.go -> gen/go/tinvest/sandbox_grpc.pb.go 	renamed:    gen/go/t-invest/signals.pb.go -> gen/go/tinvest/signals.pb.go 	renamed:    gen/go/t-invest/signals_grpc.pb.go -> gen/go/tinvest/signals_grpc.pb.go 	renamed:    gen/go/t-invest/stoporders.pb.go -> gen/go/tinvest/stoporders.pb.go 	renamed:    gen/go/t-invest/stoporders_grpc.pb.go -> gen/go/tinvest/stoporders_grpc.pb.go 	renamed:    gen/go/t-invest/users.pb.go -> gen/go/tinvest/users.pb.go 	renamed:    gen/go/t-invest/users_grpc.pb.go -> gen/go/tinvest/users_grpc.pb.go 	modified:   gen/go/trb/ExampleService.pb.go 	modified:   gen/go/trb/ExampleService_grpc.pb.go 	modified:   gen/go/trb/service.pb.go 	modified:   gen/go/trb/service_grpc.pb.go 	renamed:    services/t-invest/common.proto -> services/tinvest/common.proto 	renamed:    services/t-invest/instruments.proto -> services/tinvest/instruments.proto 	renamed:    services/t-invest/marketdata.proto -> services/tinvest/marketdata.proto 	renamed:    services/t-invest/operations.proto -> services/tinvest/operations

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -14,7 +14,7 @@ inputs:
   - directory: services
     paths:
       - services/trb
-      - services/t-invest
+      - services/tinvest
     exclude_paths:
       - services/google/api/annotations.proto
       - services/google/api/http.proto
