modified:   Makefile 	modified:   buf.gen.yaml 	renamed:    gen/desc/trb_proto.pb -> gen/desc/trb_protos.pb 	deleted:    gen/go/tinvest/custom_methods.go

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -13,7 +13,7 @@ plugins:
 inputs:
   - directory: services
     paths:
-      - services/trb
+      - services/nats
       - services/tinvest
     exclude_paths:
       - services/google/api/annotations.proto
